@@ -4,7 +4,9 @@ Changelog
 1.1.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- We can provide an interface as portal_types value
+  for updated content selection.
+  [thomasdesvenain]
 
 
 1.1.5 (2013-10-23)
